Updated about me and hosting links

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
   </head>
   <body>
     <h1>Weather App</h1>
-    <p>Coded by Marina Reggiani</p>
+    <p>
+      Project coded by
+      <a href="https://kumadesign.netlify.app/" target="_blank"
+        >Marina Reeggiani</a
+      >
+      and is on
+      <a href="https://github.com/dalecatup/Weather-App-Project" target="_blank"
+        >Github</a
+      >
+      and hosted on
+      <a href="https://kuma-weatherapp.netlify.app/" target="_blank">Netlify</a>
+    </p>
   </body>
 </html>
