--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p>
       Project coded by
       <a href="https://kumadesign.netlify.app/" target="_blank"
-        >Marina Reeggiani</a
+        >Marina Reggiani</a
       >
       and is on
       <a href="https://github.com/dalecatup/Weather-App-Project" target="_blank"
