--- a/index.html
+++ b/index.html
@@ -6,18 +6,24 @@
     <title>Weather App</title>
   </head>
   <body>
-    <h1>Weather App</h1>
-    <p>
-      Project coded by
-      <a href="https://kumadesign.netlify.app/" target="_blank"
-        >Marina Reggiani</a
-      >
-      and is on
-      <a href="https://github.com/dalecatup/Weather-App-Project" target="_blank"
-        >Github</a
-      >
-      and hosted on
-      <a href="https://kuma-weatherapp.netlify.app/" target="_blank">Netlify</a>
-    </p>
+    <h1>Weather App 🌡</h1>
+    <footer>
+      <p>
+        Project coded by
+        <a href="https://kumadesign.netlify.app/" target="_blank"
+          >Marina Reggiani</a
+        >
+        , opensourced on
+        <a
+          href="https://github.com/dalecatup/Weather-App-Project"
+          target="_blank"
+          >Github</a
+        >
+        and hosted on
+        <a href="https://kuma-weatherapp.netlify.app/" target="_blank"
+          >Netlify</a
+        >
+      </p>
+    </footer>
   </body>
 </html>
