--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="https://kumadesign.netlify.app/" target="_blank"
           >Marina Reggiani</a
         >
-        , opensourced on
+        - opensourced on
         <a
           href="https://github.com/dalecatup/Weather-App-Project"
           target="_blank"
