--- a/index.html
+++ b/index.html
@@ -3,6 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="src/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Questrial&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap"
+      rel="stylesheet"
+    />
+    <script src="https://unpkg.com/axios@1.6.7/dist/axios.min.js"></script>
     <title>Weather App🌡</title>
   </head>
   <body>
@@ -35,23 +57,24 @@
           </div>
         </div>
       </main>
-    <footer>
-      <p>
-        Project coded by
-        <a href="https://kumadesign.netlify.app/" target="_blank"
-          >Marina Reggiani</a
-        >
-        - opensourced on
-        <a
-          href="https://github.com/dalecatup/Weather-App-Project"
-          target="_blank"
-          >Github</a
-        >
-        and hosted on
-        <a href="https://kuma-weatherapp.netlify.app/" target="_blank"
-          >Netlify</a
-        >
-      </p>
-    </footer>
+      <footer>
+        <p>
+          Project coded by
+          <a href="https://kumadesign.netlify.app/" target="_blank"
+            >Marina Reggiani</a
+          >
+          - opensourced on
+          <a
+            href="https://github.com/dalecatup/Weather-App-Project"
+            target="_blank"
+            >Github</a
+          >
+          and hosted on
+          <a href="https://kuma-weatherapp.netlify.app/" target="_blank"
+            >Netlify</a
+          >
+        </p>
+      </footer>
+    </div>
   </body>
 </html>
