--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <main>
         <div class="current-weather">
           <div>
-            <h1 class="current-city">Paris</h1>
+            <h1 class="current-city">London</h1>
             <p class="current-info">
               <span class="current-date-time"></span>, moderate rain <br />
               Humidity: <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
