--- a/index.html
+++ b/index.html
@@ -44,10 +44,12 @@
       <main>
         <div class="current-weather">
           <div>
-            <h1 class="current-city">London</h1>
+            <h1 class="current-city"></h1>
             <p class="current-info">
-              <span class="current-date-time"></span>, moderate rain <br />
-              Humidity: <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
+              <span id="current-date-time"></span>,
+              <span id="description"></span><br />
+              Humidity: <strong id="humidity"></strong>, Wind:
+              <strong id="wind-speed"></strong>
             </p>
           </div>
           <div class="current-temp">
