Added icons from API and adjusted CSS

--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
             </p>
           </div>
           <div class="current-temp">
-            <span class="current-temp-emoji">☔</span>
+            <div id="icon">
+              <span class="current-temp-emoji"> </span>
+            </div>
             <span class="current-temp-number">14</span>
             <span class="current-temp-value">°C</span>
           </div>
