updated icons css

--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
             </p>
           </div>
           <div class="current-temp">
-            <div id="icon">
-              <span class="current-temp-emoji"> </span>
-            </div>
+            <div id="icon"></div>
             <span class="current-temp-number">14</span>
             <span class="current-temp-value">°C</span>
           </div>
