Updated CSS, JS and HTML for final design

--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
           <a href="https://kumadesign.netlify.app/" target="_blank"
             >Marina Reggiani</a
           >
-          - open-sourced on
+          <br />
+          open-sourced on
           <a
             href="https://github.com/dalecatup/Weather-App-Project"
             target="_blank"
